test/corpus/contextual-keywords.txt
================================================================================
From keyword can be a variable
================================================================================

var a = Assert.Range(from, to);

--------------------------------------------------------------------------------

(compilation_unit
  (global_statement
    (local_declaration_statement
      (variable_declaration
        type: (implicit_type)
        (variable_declarator
          name: (identifier)
          (invocation_expression
            function: (member_access_expression
              expression: (identifier)
              name: (identifier))
            arguments: (argument_list
              (argument
                (identifier))
              (argument
                (identifier)))))))))

================================================================================
File keyword in invocation
================================================================================

file.Method(1, 2);

--------------------------------------------------------------------------------

(compilation_unit
  (global_statement
    (expression_statement
      (invocation_expression
        function: (member_access_expression
          expression: (identifier)
          name: (identifier))
        arguments: (argument_list
          (argument
            (integer_literal))
          (argument
            (integer_literal)))))))

================================================================================
File contextual keyword
================================================================================

void file() { }
void m(file p) { }
void m(int file) { }
void m()
{
    file v = null;
    int file = file;

    file();
    m(file);

    var x = file + 1;
}

file class file { }

--------------------------------------------------------------------------------

(compilation_unit
  (global_statement
    (local_function_statement
      type: (predefined_type)
      name: (identifier)
      parameters: (parameter_list)
      body: (block)))
  (global_statement
    (local_function_statement
      type: (predefined_type)
      name: (identifier)
      parameters: (parameter_list
        (parameter
          type: (identifier)
          name: (identifier)))
      body: (block)))
  (global_statement
    (local_function_statement
      type: (predefined_type)
      name: (identifier)
      parameters: (parameter_list
        (parameter
          type: (predefined_type)
          name: (identifier)))
      body: (block)))
  (global_statement
    (local_function_statement
      type: (predefined_type)
      name: (identifier)
      parameters: (parameter_list)
      body: (block
        (local_declaration_statement
          (variable_declaration
            type: (identifier)
            (variable_declarator
              name: (identifier)
              (null_literal))))
        (local_declaration_statement
          (variable_declaration
            type: (predefined_type)
            (variable_declarator
              name: (identifier)
              (identifier))))
        (expression_statement
          (invocation_expression
            function: (identifier)
            arguments: (argument_list)))
        (expression_statement
          (invocation_expression
            function: (identifier)
            arguments: (argument_list
              (argument
                (identifier)))))
        (local_declaration_statement
          (variable_declaration
            type: (implicit_type)
            (variable_declarator
              name: (identifier)
              (binary_expression
                left: (identifier)
                right: (integer_literal))))))))
  (class_declaration
    (modifier)
    name: (identifier)
    body: (declaration_list)))

================================================================================
Scoped contextual keyword
================================================================================

void scoped() { }
void m(scoped p) { }
void m(scoped ref int p) { }
void m(scoped ref scoped p) { }
void m(int scoped) { }
void m()
{
    scoped v = null;
    scoped ref int v = null;
    scoped ref scoped v = null;
    int scoped = null;

    scoped();
    m(scoped);

    var x = scoped + 1;
    var l = scoped => null;
    var l = (scoped i) => null;
    var l = (scoped, i) => null;
    var l = scoped (int i, int j) => null;
}

class scoped { }

--------------------------------------------------------------------------------

(compilation_unit
  (global_statement
    (local_function_statement
      type: (predefined_type)
      name: (identifier)
      parameters: (parameter_list)
      body: (block)))
  (global_statement
    (local_function_statement
      type: (predefined_type)
      name: (identifier)
      parameters: (parameter_list
        (parameter
          type: (identifier)
          name: (identifier)))
      body: (block)))
  (global_statement
    (local_function_statement
      type: (predefined_type)
      name: (identifier)
      parameters: (parameter_list
        (parameter
          (modifier)
          (modifier)
          type: (predefined_type)
          name: (identifier)))
      body: (block)))
  (global_statement
    (local_function_statement
      type: (predefined_type)
      name: (identifier)
      parameters: (parameter_list
        (parameter
          (modifier)
          (modifier)
          type: (identifier)
          name: (identifier)))
      body: (block)))
  (global_statement
    (local_function_statement
      type: (predefined_type)
      name: (identifier)
      parameters: (parameter_list
        (parameter
          type: (predefined_type)
          name: (identifier)))
      body: (block)))
  (global_statement
    (local_function_statement
      type: (predefined_type)
      name: (identifier)
      parameters: (parameter_list)
      body: (block
        (local_declaration_statement
          (variable_declaration
            type: (identifier)
            (variable_declarator
              name: (identifier)
              (null_literal))))
        (local_declaration_statement
          (variable_declaration
            type: (scoped_type
              type: (ref_type
                type: (predefined_type)))
            (variable_declarator
              name: (identifier)
              (null_literal))))
        (local_declaration_statement
          (variable_declaration
            type: (scoped_type
              type: (ref_type
                type: (identifier)))
            (variable_declarator
              name: (identifier)
              (null_literal))))
        (local_declaration_statement
          (variable_declaration
            type: (predefined_type)
            (variable_declarator
              name: (identifier)
              (null_literal))))
        (expression_statement
          (invocation_expression
            function: (identifier)
            arguments: (argument_list)))
        (expression_statement
          (invocation_expression
            function: (identifier)
            arguments: (argument_list
              (argument
                (identifier)))))
        (local_declaration_statement
          (variable_declaration
            type: (implicit_type)
            (variable_declarator
              name: (identifier)
              (binary_expression
                left: (identifier)
                right: (integer_literal)))))
        (local_declaration_statement
          (variable_declaration
            type: (implicit_type)
            (variable_declarator
              name: (identifier)
              (lambda_expression
                parameters: (implicit_parameter)
                body: (null_literal)))))
        (local_declaration_statement
          (variable_declaration
            type: (implicit_type)
            (variable_declarator
              name: (identifier)
              (lambda_expression
                parameters: (parameter_list
                  (parameter
                    type: (identifier)
                    name: (identifier)))
                body: (null_literal)))))
        (local_declaration_statement
          (variable_declaration
            type: (implicit_type)
            (variable_declarator
              name: (identifier)
              (lambda_expression
                parameters: (parameter_list
                  (parameter
                    name: (identifier))
                  (parameter
                    name: (identifier)))
                body: (null_literal)))))
        (local_declaration_statement
          (variable_declaration
            type: (implicit_type)
            (variable_declarator
              name: (identifier)
              (lambda_expression
                type: (identifier)
                parameters: (parameter_list
                  (parameter
                    type: (predefined_type)
                    name: (identifier))
                  (parameter
                    type: (predefined_type)
                    name: (identifier)))
                body: (null_literal))))))))
  (class_declaration
    name: (identifier)
    body: (declaration_list)))

================================================================================
Set contextual keyword
================================================================================

void set() { }
void m(set p) { }
void m(int set) { }
void m()
{
    set v = null;
    int set = set;

    set();
    m(set);

    var x = set + 1;
}

class set { }

--------------------------------------------------------------------------------

(compilation_unit
  (global_statement
    (local_function_statement
      type: (predefined_type)
      name: (identifier)
      parameters: (parameter_list)
      body: (block)))
  (global_statement
    (local_function_statement
      type: (predefined_type)
      name: (identifier)
      parameters: (parameter_list
        (parameter
          type: (identifier)
          name: (identifier)))
      body: (block)))
  (global_statement
    (local_function_statement
      type: (predefined_type)
      name: (identifier)
      parameters: (parameter_list
        (parameter
          type: (predefined_type)
          name: (identifier)))
      body: (block)))
  (global_statement
    (local_function_statement
      type: (predefined_type)
      name: (identifier)
      parameters: (parameter_list)
      body: (block
        (local_declaration_statement
          (variable_declaration
            type: (identifier)
            (variable_declarator
              name: (identifier)
              (null_literal))))
        (local_declaration_statement
          (variable_declaration
            type: (predefined_type)
            (variable_declarator
              name: (identifier)
              (identifier))))
        (expression_statement
          (invocation_expression
            function: (identifier)
            arguments: (argument_list)))
        (expression_statement
          (invocation_expression
            function: (identifier)
            arguments: (argument_list
              (argument
                (identifier)))))
        (local_declaration_statement
          (variable_declaration
            type: (implicit_type)
            (variable_declarator
              name: (identifier)
              (binary_expression
                left: (identifier)
                right: (integer_literal))))))))
  (class_declaration
    name: (identifier)
    body: (declaration_list)))

================================================================================
Var contextual keyword
================================================================================

void var() { }
void m(var p) { }
void m(int var) { }
void m()
{
    var v = null;
    int var = var;
    var var = 1;

    var();
    m(var);

    var x = var + 1;
}

class var { }

--------------------------------------------------------------------------------

(compilation_unit
  (global_statement
    (local_function_statement
      type: (predefined_type)
      name: (identifier)
      parameters: (parameter_list)
      body: (block)))
  (global_statement
    (local_function_statement
      type: (predefined_type)
      name: (identifier)
      parameters: (parameter_list
        (parameter
          type: (implicit_type)
          name: (identifier)))
      body: (block)))
  (global_statement
    (local_function_statement
      type: (predefined_type)
      name: (identifier)
      parameters: (parameter_list
        (parameter
          type: (predefined_type)
          name: (identifier)))
      body: (block)))
  (global_statement
    (local_function_statement
      type: (predefined_type)
      name: (identifier)
      parameters: (parameter_list)
      body: (block
        (local_declaration_statement
          (variable_declaration
            type: (implicit_type)
            (variable_declarator
              name: (identifier)
              (null_literal))))
        (local_declaration_statement
          (variable_declaration
            type: (predefined_type)
            (variable_declarator
              name: (identifier)
              (identifier))))
        (local_declaration_statement
          (variable_declaration
            type: (implicit_type)
            (variable_declarator
              name: (identifier)
              (integer_literal))))
        (expression_statement
          (invocation_expression
            function: (identifier)
            arguments: (argument_list)))
        (expression_statement
          (invocation_expression
            function: (identifier)
            arguments: (argument_list
              (argument
                (identifier)))))
        (local_declaration_statement
          (variable_declaration
            type: (implicit_type)
            (variable_declarator
              name: (identifier)
              (binary_expression
                left: (identifier)
                right: (integer_literal))))))))
  (class_declaration
    name: (identifier)
    body: (declaration_list)))

================================================================================
Nameof contextual keyword
================================================================================

void nameof() { }
void m(nameof p) { }
void m(int nameof) { }
void m()
{
    nameof v = null;
    int nameof = nameof;

    nameof();
    nameof(a, b);
    m(nameof);

    var x = nameof + 1;
}

class nameof { }

--------------------------------------------------------------------------------

(compilation_unit
  (global_statement
    (local_function_statement
      type: (predefined_type)
      name: (identifier)
      parameters: (parameter_list)
      body: (block)))
  (global_statement
    (local_function_statement
      type: (predefined_type)
      name: (identifier)
      parameters: (parameter_list
        (parameter
          type: (identifier)
          name: (identifier)))
      body: (block)))
  (global_statement
    (local_function_statement
      type: (predefined_type)
      name: (identifier)
      parameters: (parameter_list
        (parameter
          type: (predefined_type)
          name: (identifier)))
      body: (block)))
  (global_statement
    (local_function_statement
      type: (predefined_type)
      name: (identifier)
      parameters: (parameter_list)
      body: (block
        (local_declaration_statement
          (variable_declaration
            type: (identifier)
            (variable_declarator
              name: (identifier)
              (null_literal))))
        (local_declaration_statement
          (variable_declaration
            type: (predefined_type)
            (variable_declarator
              name: (identifier)
              (identifier))))
        (expression_statement
          (invocation_expression
            function: (identifier)
            arguments: (argument_list)))
        (expression_statement
          (invocation_expression
            function: (identifier)
            arguments: (argument_list
              (argument
                (identifier))
              (argument
                (identifier)))))
        (expression_statement
          (invocation_expression
            function: (identifier)
            arguments: (argument_list
              (argument
                (identifier)))))
        (local_declaration_statement
          (variable_declaration
            type: (implicit_type)
            (variable_declarator
              name: (identifier)
              (binary_expression
                left: (identifier)
                right: (integer_literal))))))))
  (class_declaration
    name: (identifier)
    body: (declaration_list)))

================================================================================
Async contextual keyword
================================================================================

class C {
    void M(bool async) {
        Use(async);
    }
    async Task Run() => await Work();
    Func<Task> callback = async () => await Work();
}

--------------------------------------------------------------------------------

(compilation_unit
  (class_declaration
    name: (identifier)
    body: (declaration_list
      (method_declaration
        returns: (predefined_type)
        name: (identifier)
        parameters: (parameter_list
          (parameter
            type: (predefined_type)
            name: (identifier)))
        body: (block
          (expression_statement
            (invocation_expression
              function: (identifier)
              arguments: (argument_list
                (argument
                  (identifier)))))))
      (method_declaration
        (modifier)
        returns: (identifier)
        name: (identifier)
        parameters: (parameter_list)
        body: (arrow_expression_clause
          (await_expression
            (invocation_expression
              function: (identifier)
              arguments: (argument_list)))))
      (field_declaration
        (variable_declaration
          type: (generic_name
            (identifier)
            (type_argument_list
              (identifier)))
          (variable_declarator
            name: (identifier)
            (lambda_expression
              (modifier)
              parameters: (parameter_list)
              body: (await_expression
                (invocation_expression
                  function: (identifier)
                  arguments: (argument_list))))))))))

================================================================================
Static local function after invocation
================================================================================

class C {
    void M() {
        Test(true);
        static void Test(bool value) { }
    }
}

--------------------------------------------------------------------------------

(compilation_unit
  (class_declaration
    (identifier)
    (declaration_list
      (method_declaration
        (predefined_type)
        (identifier)
        (parameter_list)
        (block
          (expression_statement
            (invocation_expression
              (identifier)
              (argument_list
                (argument
                  (boolean_literal)))))
          (local_function_statement
            (modifier)
            (predefined_type)
            (identifier)
            (parameter_list
              (parameter
                (predefined_type)
                (identifier)))
            (block)))))))

================================================================================
Partial and required contextual identifiers in assignments
================================================================================

partial class PartialType { }

class C {
    required object Value { get; init; }

    void M() {
        var partial = Get();
        partial = partial.Clone();
        partial.Value = required.Value;

        var required = Get();
        required = required.Clone();
        required.Value = partial.Value;
    }

    void N() { }
}

--------------------------------------------------------------------------------

(compilation_unit
  (class_declaration
    (modifier)
    (identifier)
    (declaration_list))
  (class_declaration
    (identifier)
    (declaration_list
      (property_declaration
        (modifier)
        (predefined_type)
        (identifier)
        (accessor_list
          (accessor_declaration)
          (accessor_declaration)))
      (method_declaration
        (predefined_type)
        (identifier)
        (parameter_list)
        (block
          (local_declaration_statement
            (variable_declaration
              (implicit_type)
              (variable_declarator
                (identifier)
                (invocation_expression
                  (identifier)
                  (argument_list)))))
          (expression_statement
            (assignment_expression
              (identifier)
              (invocation_expression
                (member_access_expression
                  (identifier)
                  (identifier))
                (argument_list))))
          (expression_statement
            (assignment_expression
              (member_access_expression
                (identifier)
                (identifier))
              (member_access_expression
                (identifier)
                (identifier))))
          (local_declaration_statement
            (variable_declaration
              (implicit_type)
              (variable_declarator
                (identifier)
                (invocation_expression
                  (identifier)
                  (argument_list)))))
          (expression_statement
            (assignment_expression
              (identifier)
              (invocation_expression
                (member_access_expression
                  (identifier)
                  (identifier))
                (argument_list))))
          (expression_statement
            (assignment_expression
              (member_access_expression
                (identifier)
                (identifier))
              (member_access_expression
                (identifier)
                (identifier))))))
      (method_declaration
        (predefined_type)
        (identifier)
        (parameter_list)
        (block)))))
